--- a/src/WordRot/PlayBundle/Resources/config/routing.yml
+++ b/src/WordRot/PlayBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 word_rot_play_homepage:
-    pattern:  /hello/{name}
+    pattern:  /
     defaults: { _controller: WordRotPlayBundle:Default:index }
