Mid-swing implementing custom authentication provider for Wordnik

--- a/src/WordRot/PlayBundle/Resources/config/routing.yml
+++ b/src/WordRot/PlayBundle/Resources/config/routing.yml
@@ -1,3 +1,37 @@
-word_rot_play_homepage:
+homepage:
     pattern:  /
     defaults: { _controller: WordRotPlayBundle:Default:index }
+
+login:
+    pattern:   /login
+    defaults:  { _controller: WordRotPlayBundle:Default:login }
+
+login_check:
+    pattern:   /login_check
+
+logout:
+    pattern:   /logout
+
+play:
+    pattern: /play
+    defaults: { _controller: WordRotPlayBundle:Play:index }
+
+# for dev
+# fos_user_security:
+#     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+# fos_user_profile:
+#     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+#     prefix: /profile
+
+# fos_user_register:
+#     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+#     prefix: /register
+
+# fos_user_resetting:
+#     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+#     prefix: /resetting
+
+# fos_user_change_password:
+#     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+#     prefix: /profile
