--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,37 +11,68 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
-        secured_area:
-            pattern:    ^/demo/secured/
+        wordnik_secured:
+            pattern: ^/play
             form_login:
-                check_path: /demo/secured/login_check
-                login_path: /demo/secured/login
-            logout:
-                path:   /demo/secured/logout
-                target: /demo/
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                provider: fos_userbundle
+                csrf_provider: form.csrf_provider
+            logout:       true
+            anonymous:    true
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        #
-        # You must uncomment the two following rules to restrict access to paths
-        # starting with the /_internal prefix to only localhost
-        #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
-        #- { path: ^/_internal/secure, roles: ROLE_NO_ACCESS }
+        - { path: ^/play, roles: ROLE_USER }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+    # firewalls:
+    #     secured_area:
+    #         logout: ~
+    #         pattern:    ^/
+    #         anonymous: ~
+    #         form_login:
+    #             login_path:  /login
+    #             check_path:  /login_check
+    # providers:
+    #     in_memory:
+    #         memory:
+    #             users:
+    #                 user: { password: userpass, roles: [ 'ROLE_USER' ] }
+    #                 admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+
+# security:
+#     encoders:
+#         FOS\UserBundle\Model\UserInterface: sha512
+
+#     role_hierarchy:
+#         ROLE_ADMIN:       ROLE_USER
+#         ROLE_SUPER_ADMIN: ROLE_ADMIN
+
+#     providers:
+#         fos_userbundle:
+#             id: fos_user.user_provider.username
+
+#     firewalls:
+#         dev:
+#             pattern:  ^/(_(profiler|wdt)|css|images|js)/
+#             security: false
+#         main:
+#             pattern: ^/
+#             form_login:
+#                 provider: fos_userbundle
+#                 csrf_provider: form.csrf_provider
+#             logout:       true
+#             anonymous:    true
+
+
+#     access_control:
+#         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+#         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+#         #
+#         # You must uncomment the two following rules to restrict access to paths
+#         # starting with the /_internal prefix to only localhost
+#         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+#         #- { path: ^/_internal/secure, roles: ROLE_NO_ACCESS }
