--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,18 +14,22 @@ security:
         fos_userbundle:
             id: fos_user.user_provider.username
 
+    # providers:
+    #     in_memory:
+    #         memory:
+    #             users:
+    #                 user: { password: userpass, roles: [ 'ROLE_USER' ] }
+    #                 admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+
     firewalls:
         wordnik_secured:
             pattern: ^/play
             form_login:
+                # provider: in_memory
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
             logout:       true
             anonymous:    true
-
-    access_control:
-        - { path: ^/play, roles: ROLE_USER }
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
     # firewalls:
     #     secured_area:
@@ -35,12 +39,10 @@ security:
     #         form_login:
     #             login_path:  /login
     #             check_path:  /login_check
-    # providers:
-    #     in_memory:
-    #         memory:
-    #             users:
-    #                 user: { password: userpass, roles: [ 'ROLE_USER' ] }
-    #                 admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+
+    access_control:
+        - { path: ^/play, roles: ROLE_USER }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
 # security:
 #     encoders:
