--- a/src/WordRot/PlayBundle/Resources/config/services.yml
+++ b/src/WordRot/PlayBundle/Resources/config/services.yml
@@ -10,7 +10,7 @@ services:
 
     security.authentication.provider.wordnik:
         class:  WordRot\PlayBundle\Security\Authentication\Provider\WordnikProvider
-        arguments: ['', @word_rot_play.wordnik, @doctrine]
+        arguments: ['', @word_rot_play.wordnik, @service_container]
 
     security.authentication.listener.wordnik:
         class:  WordRot\PlayBundle\Security\Firewall\WordnikListener
