corrected implementation of login_check, and encoder for entity user provider

--- a/src/WordRot/PlayBundle/Resources/config/routing.yml
+++ b/src/WordRot/PlayBundle/Resources/config/routing.yml
@@ -7,7 +7,7 @@ login:
     defaults:  { _controller: WordRotPlayBundle:Default:login }
 
 login_check:
-    pattern:   /login_check
+    pattern:   /play_check
 
 logout:
     pattern:   /logout
