--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ jms_security_extra:
 
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        WordRot\PlayBundle\Entity\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -23,7 +23,10 @@ security:
             form_login:
                 provider: wordnik_users
                 login_path:  /login
-                check_path:  /login_check
+                check_path:  /play_check
+                # on success
+                always_use_default_target_path: true
+                default_target_path: /play
 
     access_control:
         - { path: ^/play, roles: ROLE_USER }
