--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,9 @@ assetic:
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
+        less:
+            node: %node_bin%
+            node_paths: %node_paths%
         cssrewrite: ~
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
