--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,20 +15,18 @@ security:
             entity: { class: WordRotPlayBundle:User, property: username }
 
     firewalls:
-        wordnik_secured:
-            pattern: ^/play
-            logout: true
-            anonymous: false
-            wordnik: true
-            provider: wordnik_users
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
 
-            # form_login:
-            #     provider: wordnik_users
-            #     login_path:  /login
-            #     check_path:  /play_check
-            #     # on success
-            #     always_use_default_target_path: true
-            #     default_target_path: /play
+        wordnik_secured:
+            pattern:   ^/play
+            anonymous: true
+            wordnik:   true
+            provider:  wordnik_users
+            logout:
+                path:   logout
+                target: login
 
     access_control:
         - { path: ^/play, roles: ROLE_USER }
