--- a/src/WordRot/PlayBundle/Resources/config/routing.yml
+++ b/src/WordRot/PlayBundle/Resources/config/routing.yml
@@ -10,7 +10,7 @@ login_check:
     pattern:   /play_check
 
 logout:
-    pattern:   /logout
+    pattern:   /play/logout
 
 play:
     pattern: /play
