--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -53,6 +53,7 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
+        default_entity_manager: default
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -61,3 +62,26 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_rest:
+    view:
+        view_response_listener: force
+        failed_validation: HTTP_BAD_REQUEST
+        default_engine: php
+        formats:
+            json: true
+            # xml: false
+            # rss: false
+            # twig: false
+    format_listener:
+        prefer_extension: true
+        default_priorities: [json, html, '*/*']
+    body_listener:
+        decoders:
+            json: fos_rest.decoder.json
+    routing_loader:
+        default_format: json
+
+sensio_framework_extra:
+    view:
+        annotations: false
