--- a/src/WordRot/PlayBundle/Resources/config/routing.yml
+++ b/src/WordRot/PlayBundle/Resources/config/routing.yml
@@ -15,3 +15,16 @@ logout:
 play:
     pattern: /play
     defaults: { _controller: WordRotPlayBundle:Play:index }
+
+# # # # # # # #
+# REST Routes #
+# # # # # # # #
+
+users_get:
+    pattern: /play/users/{id}
+    defaults:
+        _controller: WordRotPlayBundle:Users:get
+        _format: json
+    requirements:
+        _method: GET
+        id: "\d+"
