REST exposure of user API lists; Game entity; User <-> Game mapping

--- a/src/WordRot/PlayBundle/Resources/config/routing.yml
+++ b/src/WordRot/PlayBundle/Resources/config/routing.yml
@@ -28,3 +28,10 @@ users_get:
     requirements:
         _method: GET
         id: "\d+"
+
+lists_get:
+    pattern: /play/lists
+    defaults:
+        _controller: WordRotPlayBundle:Lists:all
+        _format: json
+    requirements: { _method: GET }
