updated nginx conf for backbone pushState

--- a/docs/nginx_example_server.conf
+++ b/docs/nginx_example_server.conf
@@ -11,7 +11,7 @@ server {
 
     # Backbone
     root /absolute/path/to/wordrot/backbone/app;
-    index index.html;
+    try_files $uri /index.html;
 
     # Node API
     location /wordrot-api {
