--- a/docs/nginx_example_server.conf
+++ b/docs/nginx_example_server.conf
@@ -1,5 +1,5 @@
 
-# Avoid CORS configuration by doing an nginx => node prox_pass
+# Avoid CORS configuration by doing an nginx => node proxy_pass
 
 upstream wordrot_node_api {
     server 127.0.0.1:3000;
