--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "The API server for the wordrot game",
   "author": "freen <dbickett@gmail.com>",
   "dependencies": {
+    "async": "^0.9.0",
     "connect-mongo": "^0.4.1",
     "express": "3.4.x",
     "lodash": "2.2.x",
