--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,23 @@
 {
   "name": "wordrot-api-server",
   "version": "0.0.1",
+  "private": true,
   "description": "The API server for the wordrot game",
   "author": "freen <dbickett@gmail.com>",
+  "scripts": {
+    "start": "node api.js"
+  },
   "dependencies": {
     "async": "^0.9.0",
+    "body-parser": "^1.9.2",
     "connect-mongo": "^0.4.1",
-    "express": "3.4.x",
-    "lodash": "2.2.x",
-    "mongoskin": "0.6.x",
+    "cookie-parser": "^1.3.3",
+    "errorhandler": "^1.2.2",
+    "express": "4.10.x",
+    "express-session": "^1.9.1",
+    "lodash": "2.4.x",
+    "mongoskin": "1.4.x",
+    "multer": "^0.1.6",
     "wordnik": "*"
   },
   "engines": {
