--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.9.2",
-    "connect-mongo": "^0.4.1",
+    "connect-mongo": "^0.8.2",
     "errorhandler": "^1.2.2",
     "express": "4.10.x",
     "express-session": "^1.9.1",
     "lodash": "2.4.x",
+    "mongoose": "^4.1.1",
     "mongoskin": "1.4.x",
     "multer": "^0.1.6",
+    "promised-io": "^0.3.5",
     "wordnik": "*"
   },
   "engines": {
     "node": ">=0.10"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "sinon": "^1.15.4"
   }
 }
