--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "node": ">=0.10"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
     "mocha": "^2.2.5",
     "sinon": "^1.15.4"
   }
