--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "bluebird": "^2.9.34",
     "body-parser": "^1.9.2",
     "connect-mongo": "^0.8.2",
     "errorhandler": "^1.2.2",
@@ -18,7 +19,6 @@
     "mongoose": "^4.1.1",
     "mongoskin": "1.4.x",
     "multer": "^0.1.6",
-    "promised-io": "^0.3.5",
     "wordnik": "*"
   },
   "engines": {
